--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-image: url('background.jpg'); /* Replace with your background image path */
+            background-image: url('https://unsplash.com/photos/a-close-up-of-a-window-with-a-building-in-the-background-fyeOxvYvIyY'); /* Replace with your background image path */
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
