--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-image: url('https://unsplash.com/photos/a-close-up-of-a-window-with-a-building-in-the-background-fyeOxvYvIyY'); /* Replace with your background image path */
+            background-image: url('https://images.unsplash.com/photo-1640158615573-cd28feb1bf4e?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGRhdGF8ZW58MHx8MHx8fDA%3D'); /* Replace with your background image path */
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
