--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-image: url('./data.jpg'); /* Replace with your background image path */
+            background-image: url('./data.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
