--- a/index.html
+++ b/index.html
@@ -1,64 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Synthome.ai - Next Generation of Biological Data</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #121212;
-            color: #ffffff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-image: url('./data.jpg');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-        }
-        .container {
-            text-align: center;
-            background-color: rgba(0, 0, 0, 0.7);
-            padding: 2em;
-            border-radius: 10px;
-        }
-        h1 {
-            font-size: 3em;
-            color: #00ff00;
-            margin-bottom: 0.5em;
-        }
-        p {
-            font-size: 1.2em;
-            color: #d0d0d0;
-        }
-        .cta {
-            margin-top: 2em;
-        }
-        .cta button {
-            background-color: #00ff00;
-            border: none;
-            color: #121212;
-            padding: 1em 2em;
-            font-size: 1.2em;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-        .cta button:hover {
-            background-color: #00cc00;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>synthome.ai</title>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Synthome.ai</h1>
-        <p>01110011 01111001 01101110 01110100 01101000 01101111 01101101 01100101</p>
-        <div class="cta">
-            <button onclick="document.location.href='mailto:info@synthome.ai'">Learn More</button>
-        </div>
+  <div class="App">
+    <div>
+      <header class="App-header">
+        <!-- <img src="path/to/LOGO" alt="Logo" class="logo"> -->
+        <h1>synthome.ai</h1>
+        <p>Revolutionizing Life Sciences with AI</p>
+      </header>
+      <main>
+        <form id="emailForm">
+          <input
+            type="email"
+            id="emailInput"
+            placeholder="Enter your email"
+            required
+          />
+          <button type="submit" id="submitButton">
+            Get early access
+          </button>
+        </form>
+        <p id="message"></p>
+      </main>
     </div>
+  </div>
+
+  <script>
+    const emailForm = document.getElementById('emailForm');
+    const emailInput = document.getElementById('emailInput');
+    const submitButton = document.getElementById('submitButton');
+    const messageElement = document.getElementById('message');
+
+    emailForm.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const email = emailInput.value.trim();
+
+      try {
+        const response = await fetch('/api/submit-email', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({ email }),
+        });
+
+        if (!response.ok) {
+          throw new Error(`HTTP error! status: ${response.status}`);
+        }
+
+        messageElement.textContent = "Thank you for your interest! We'll keep you updated.";
+        emailInput.value = '';
+      } catch (error) {
+        console.error('Fetch error:', error);
+        messageElement.textContent = 'An error occurred. Please try again.';
+      }
+    });
+  </script>
 </body>
 </html>
