--- a/index.html
+++ b/index.html
@@ -1,27 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>synthome.ai</title>
   <link rel="stylesheet" href="index.css">
+  <style>
+    #submitButton.loading {
+      cursor: not-allowed;
+      opacity: 0.6;
+    }
+
+    #submitButton.loading::after {
+      content: '...';
+      animation: ellipsis 1s infinite;
+    }
+
+    @keyframes ellipsis {
+      0% {
+        content: '...';
+      }
+
+      33% {
+        content: '.';
+      }
+
+      66% {
+        content: '..';
+      }
+
+      100% {
+        content: '...';
+      }
+    }
+  </style>
 </head>
+
 <body>
   <div class="App">
     <div>
       <header class="App-header">
-        <!-- <img src="path/to/LOGO" alt="Logo" class="logo"> -->
+        <img src="dnalogo.png" alt="Logo" class="logo">
         <h1>synthome.ai</h1>
         <p>Revolutionizing Life Sciences with AI</p>
       </header>
       <main>
         <form id="emailForm">
-          <input
-            type="email"
-            id="emailInput"
-            placeholder="Enter your email"
-            required
-          />
+          <input type="email" id="emailInput" placeholder="Enter your email" required />
           <button type="submit" id="submitButton">
             Get early access
           </button>
@@ -41,13 +67,17 @@
       e.preventDefault();
       const email = emailInput.value.trim();
 
+      submitButton.textContent = 'Loading...';
+      submitButton.classList.add('loading');
+      submitButton.disabled = true;
+
       try {
-        const response = await fetch('/api/submit-email', {
+        const response = await fetch('https://script.google.com/macros/s/AKfycbwQnPU3pUAIBR2QxNOrPSy5cTxjqlAg4KzA0MsAxaqpz1RzsQikmrnogsTO4JEaCIpl/exec', {
           method: 'POST',
           headers: {
-            'Content-Type': 'application/json',
+            'Content-Type': 'application/x-www-form-urlencoded',
           },
-          body: JSON.stringify({ email }),
+          body: `email=${encodeURIComponent(email)}`,
         });
 
         if (!response.ok) {
@@ -59,8 +89,13 @@
       } catch (error) {
         console.error('Fetch error:', error);
         messageElement.textContent = 'An error occurred. Please try again.';
+      } finally {
+        submitButton.textContent = 'Get early access';
+        submitButton.classList.remove('loading');
+        submitButton.disabled = false;
       }
     });
   </script>
 </body>
+
 </html>
