--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         content: '...';
       }
     }
+
+    .hidden {
+      display: none;
+    }
   </style>
 </head>
 
@@ -72,7 +76,7 @@
       submitButton.disabled = true;
 
       try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycbwQnPU3pUAIBR2QxNOrPSy5cTxjqlAg4KzA0MsAxaqpz1RzsQikmrnogsTO4JEaCIpl/exec', {
+        const response = await fetch('YOUR_WEB_APP_URL_HERE', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/x-www-form-urlencoded',
@@ -85,11 +89,10 @@
         }
 
         messageElement.textContent = "Thank you for your interest! We'll keep you updated.";
-        emailInput.value = '';
+        emailForm.classList.add('hidden'); // Hide form elements
       } catch (error) {
         console.error('Fetch error:', error);
         messageElement.textContent = 'An error occurred. Please try again.';
-      } finally {
         submitButton.textContent = 'Get early access';
         submitButton.classList.remove('loading');
         submitButton.disabled = false;
