--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       submitButton.disabled = true;
 
       try {
-        const response = await fetch('YOUR_WEB_APP_URL_HERE', {
+        const response = await fetch('https://script.google.com/macros/s/AKfycbwQnPU3pUAIBR2QxNOrPSy5cTxjqlAg4KzA0MsAxaqpz1RzsQikmrnogsTO4JEaCIpl/exec', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/x-www-form-urlencoded',
